--- a/src/components/PersonDetails/PersonDetails.css
+++ b/src/components/PersonDetails/PersonDetails.css
@@ -1,20 +1,25 @@
 .person-details {
-  display: flex;
-  margin-top: 1rem;
-  flex-direction: row;
-  padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    padding: 1rem;
 }
 
 .person-details .person-image {
-  width: 30%;
-  height: 30%;
-  border-radius: 10px;
+    width: 30%;
+    height: 30%;
+    border-radius: 10px;
 }
 
 .person-details .list-group-item {
-  padding: .25rem;
+    padding: 0.25rem;
 }
 
-.person-details .list-group-item .term{
-  margin-right: .5rem;
-} 
+.person-details .list-group-item .term {
+    margin-right: 0.5rem;
+}
+
+@media (max-width: 765px) {
+    .person-details {
+        margin-top: 1rem;
+    }
+}
