--- a/src/components/RandomPlanet/RandomPlanet.css
+++ b/src/components/RandomPlanet/RandomPlanet.css
@@ -1,23 +1,25 @@
 .random-planet {
-  display: flex;
-  padding: 1rem;
+    display: flex;
+    padding: 1rem;
+    background: rgb(58, 58, 58);
+    margin: 20px auto;
 }
 
 .random-planet .planet-image {
-  width: 150px;
-  height: 150px;
-  border-radius: 10px;
-  margin-right: 1rem;
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+    margin-right: 1rem;
 }
 
 .random-planet .list-group {
-  margin: 1rem 0 0 1rem;
+    margin: 1rem 0 0 1rem;
 }
 
 .random-planet .list-group-item {
-  padding: .25rem;
+    padding: 0.25rem;
 }
 
 .random-planet .list-group-item .term {
-  margin-right: .5rem;
-} 
+    margin-right: 0.5rem;
+}
